script.js file added

--- a/lengthConverter.html
+++ b/lengthConverter.html
@@ -8,6 +8,7 @@
     <title>Converter</title>
     <link rel="stylesheet" href="lengthConverter.css">
 
+
 </head>
 
 <body>
@@ -30,27 +31,6 @@
     </div> <!-- container -->
 
 </body>
-
-<script>
-    var feet = document.getElementById('feet');
-    var inch = document.getElementById('Inch');
-
-    feet.addEventListener('input', function () {
-
-        inch.value = this.value * 12;
-    });
-
-    inch.addEventListener('input', function () {
-        feet.value = this.value / 12;
-
-        if (!Number.isInteger(feet.value)) {
-            feet.value = feet.value.toFixed(2);
-
-        };
-
-    });
-
-
-</script>
+<script src="script.js"></script>
 
 </html>
